--- a/pyo3-speedup/raytracer_rs/Cargo.toml
+++ b/pyo3-speedup/raytracer_rs/Cargo.toml
@@ -9,8 +9,14 @@ name = "raytracer_rs"
 crate-type = ["cdylib"]
 
 [dependencies]
-pyo3 = "0.20.0"
+image = "0.25.1"
+indicatif = "0.17.8"
+pyo3 = {version = "0.20.0", features = ["extension-module"]}
 rayon = "1.10.0"
+
+[dev-dependencies]
+pyo3 = "0.20.0"
+
 
 [profile.release]
 debug=true
